--- a/app/src/main/res/layout/dashboard_upsell.xml
+++ b/app/src/main/res/layout/dashboard_upsell.xml
@@ -6,17 +6,15 @@
     android:orientation="vertical">
 
     <TextView
-        style="@style/Headline.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/Hedvig.TextAppearance.Headline5"
         tools:text="Reiseforsikring" />
 
     <com.hedvig.app.ui.view.HedvigCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_double"
-        android:background="@drawable/background_rounded_corners"
-        android:backgroundTint="@color/violet_100"
         android:paddingBottom="@dimen/base_margin_triple">
 
         <LinearLayout
@@ -35,16 +33,15 @@
 
             <TextView
                 android:id="@+id/title"
-                style="@style/Headline.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/base_margin_double"
+                android:textAppearance="?textAppearanceHeadline6"
                 tools:text="Worried about leaving the house?" />
 
             <TextView
                 android:id="@+id/description"
-                style="@style/Body.Regular"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -52,11 +49,11 @@
                 android:layout_marginTop="@dimen/base_margin"
                 android:layout_marginEnd="@dimen/base_margin_double"
                 android:textAlignment="center"
+                android:textAppearance="?textAppearanceBody1"
                 tools:text="Get covered while travelling as well. Write to us in the chat to get Travel Insurance at a great price." />
 
             <Button
                 android:id="@+id/cta"
-                style="@style/HedvigButton.Purple"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
