--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -25,6 +25,11 @@
         <item>sv-SE</item>
         <item>en-SE</item>
     </string-array>
+    <string-array name="language_settings_values_no">
+        <item>system_default</item>
+        <item>nb-NO</item>
+        <item>en-NO</item>
+    </string-array>
     <string-array name="market_settings">
         <item>Sverige</item>
         <item>Norge</item>
