--- a/app/src/main/res/layout/peril_detail.xml
+++ b/app/src/main/res/layout/peril_detail.xml
@@ -9,6 +9,9 @@
         android:id="@+id/contents"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/base_margin_double"
+        android:layout_marginTop="@dimen/base_margin_double"
+        android:layout_marginBottom="@dimen/base_margin_double"
         android:drawablePadding="@dimen/base_margin"
         android:gravity="center_vertical"
         android:textAppearance="?textAppearanceHeadline6"
