Fix color-related crashes

--- a/app/src/main/res/layout/offer_fact_area.xml
+++ b/app/src/main/res/layout/offer_fact_area.xml
@@ -177,7 +177,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:background="@color/separator_on_surface"
+                android:background="@drawable/divider"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
@@ -205,7 +205,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:background="@color/separator_on_surface" />
+                android:background="@drawable/divider" />
 
             <TextView
                 android:id="@+id/offerExpirationDate"
