Start using real queries

--- a/app/src/main/res/layout/activity_contract_coverage_detail.xml
+++ b/app/src/main/res/layout/activity_contract_coverage_detail.xml
@@ -14,12 +14,22 @@
         app:navigationIcon="@drawable/ic_close"
         app:title="Mitt skydd" />
 
+    <ProgressBar
+        android:id="@+id/loadingSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize">
+        android:layout_marginTop="?actionBarSize"
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <LinearLayout
+            android:id="@+id/scrollViewContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
