--- a/app/src/main/res/layout/peril_bottom_sheet_new.xml
+++ b/app/src/main/res/layout/peril_bottom_sheet_new.xml
@@ -15,18 +15,32 @@
         android:contentDescription="@null"
         app:srcCompat="@drawable/bottom_sheet_handle" />
 
-    <TextView
-        android:id="@+id/title"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_double"
-        android:drawablePadding="@dimen/base_margin_double"
-        android:gravity="center_vertical"
-        android:textAppearance="?textAppearanceHeadline5"
-        tools:drawableStart="@drawable/ic_fire_green"
-        tools:text="Eldsvåda" />
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:contentDescription="@null"
+            tools:src="@drawable/ic_fire_green" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/base_margin_double"
+            android:textAppearance="?textAppearanceHeadline5"
+            tools:text="Eldsvåda" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/body"
