--- a/app/src/main/res/layout/peril_detail.xml
+++ b/app/src/main/res/layout/peril_detail.xml
@@ -5,17 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/contents"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/base_margin_double"
         android:layout_marginTop="@dimen/base_margin_double"
         android:layout_marginBottom="@dimen/base_margin_double"
-        android:drawablePadding="@dimen/base_margin"
-        android:gravity="center_vertical"
-        android:textAppearance="?textAppearanceHeadline6"
-        tools:drawableStart="@drawable/ic_fire_green"
-        tools:text="Fire" />
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:contentDescription="@null"
+            tools:src="@drawable/ic_fire_green" />
+
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/base_margin"
+            android:textAppearance="?textAppearanceHeadline6"
+            tools:text="Fire" />
+
+    </LinearLayout>
 
 </com.hedvig.app.ui.view.HedvigCardView>
