--- a/app/src/main/res/layout/activity_norwegian_authentication.xml
+++ b/app/src/main/res/layout/activity_norwegian_authentication.xml
@@ -11,6 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:navigationIcon="@drawable/ic_close"
         app:title="Login with BankID"
         app:titleTextAppearance="?textAppearanceHeadline6"
         tools:layout_height="?attr/actionBarSize" />
