--- a/app/src/main/res/layout/activity_contract_coverage_detail.xml
+++ b/app/src/main/res/layout/activity_contract_coverage_detail.xml
@@ -60,7 +60,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:background="@color/separator" />
+                android:background="@drawable/divider"
+                android:backgroundTint="@color/separator" />
 
             <TextView
                 android:layout_width="wrap_content"
