--- a/app/src/main/res/layout/activity_contract_detail.xml
+++ b/app/src/main/res/layout/activity_contract_detail.xml
@@ -144,7 +144,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/base_margin_triple"
-                    android:background="@color/separator"
+                    android:background="@drawable/divider"
+                    android:backgroundTint="@color/separator"
                     app:layout_constraintTop_toBottomOf="@id/typeLabel" />
 
                 <Button
@@ -207,7 +208,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/base_margin_triple"
-                    android:background="@color/separator"
+                    android:background="@drawable/divider"
+                    android:backgroundTint="@color/separator"
                     app:layout_constraintTop_toBottomOf="@id/coinsuredAmountLabel" />
 
                 <Button
