--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="dark_mode_elevation_1">#24272e</color>
     <color name="dark_mode_semi_transparent">#e624272e</color>
     <color name="translucent_tool_bar">#730A0D14</color>
+    <color name="button_background_dark">#333333</color>
 
     <color name="hedvig_black">#121212</color>
     <color name="hedvig_off_white">#fafafa</color>
