--- a/app/src/main/res/layout/chat_message_user.xml
+++ b/app/src/main/res/layout/chat_message_user.xml
@@ -34,6 +34,7 @@
             android:paddingTop="@dimen/base_margin"
             android:paddingEnd="@dimen/base_margin_double"
             android:paddingBottom="@dimen/base_margin"
+            android:textAppearance="?textAppearanceBody1"
             android:textColor="?colorOnSecondary"
             android:textColorLink="?colorOnSecondary"
             app:layout_constrainedWidth="true"
