--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -20,4 +20,6 @@
 
     <item name="colorButton" type="color">@color/mtrl_btn_bg_color_selector</item>
     <item name="textColorButton" type="color">@color/mtrl_btn_text_color_selector</item>
+
+    <item name="colorChatButtonBackground" type="color">@color/hedvig_light_gray</item>
 </resources>
