--- a/app/src/main/res/drawable/ic_attach_file.xml
+++ b/app/src/main/res/drawable/ic_attach_file.xml
@@ -1,24 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
-    android:viewportWidth="40"
-    android:viewportHeight="40">
-  <path
-      android:pathData="M8,0L32,0A8,8 0,0 1,40 8L40,32A8,8 0,0 1,32 40L8,40A8,8 0,0 1,0 32L0,8A8,8 0,0 1,8 0z"
-      android:strokeWidth="1"
-      android:fillColor="@color/colorChatButtonBackground"
-      android:fillType="evenOdd"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M19,11h2v18h-2z"
-      android:strokeWidth="1"
-      android:fillColor="@color/colorPrimary"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"/>
-  <path
-      android:pathData="M11,19h18v2h-18z"
-      android:strokeWidth="1"
-      android:fillColor="@color/colorPrimary"
-      android:fillType="nonZero"
-      android:strokeColor="#00000000"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="40dp" android:height="40dp" android:viewportWidth="40" android:viewportHeight="40">
+    <path android:pathData="M8 0h24a8 8 0 0 1 8 8v24a8 8 0 0 1-8 8H8a8 8 0 0 1-8-8V8a8 8 0 0 1 8-8z" android:strokeWidth="1" android:fillColor="?colorSurface" android:fillType="evenOdd"/>
+    <path android:pathData="M19 11h2v18h-2z" android:strokeWidth="1" android:fillColor="@color/colorPrimary"/>
+    <path android:pathData="M11 19h18v2H11z" android:strokeWidth="1" android:fillColor="@color/colorPrimary"/>
 </vector>
