--- a/app/src/main/res/drawable/ic_chat_edit_last_message.xml
+++ b/app/src/main/res/drawable/ic_chat_edit_last_message.xml
@@ -4,12 +4,12 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="?colorSecondary"
+        android:fillColor="?colorSurface"
         android:fillType="evenOdd"
         android:pathData="M0 12a12 12 0 1 1 24 0 12 12 0 1 1-24 0"
         android:strokeWidth="1" />
     <path
-        android:fillColor="#FFFFFF"
+        android:fillColor="?colorPrimary"
         android:fillType="evenOdd"
         android:pathData="M7 14.89V17h2.11l6.223-6.224-2.109-2.11L7 14.892zm9.834-5.595c0.221-0.222 0.221-0.582 0-0.804l-1.325-1.325c-0.222-0.221-0.582-0.221-0.804 0l-1.038 1.039 2.128 2.128 1.039-1.038z"
         android:strokeWidth="1" />
