--- a/app/src/main/res/layout/chat_message_hedvig.xml
+++ b/app/src/main/res/layout/chat_message_hedvig.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:theme="@style/Hedvig.Theme.Widgets.Chat.Hedvig"
     android:layout_height="wrap_content">
 
     <FrameLayout
