--- a/app/src/main/res/layout/chat_input_view.xml
+++ b/app/src/main/res/layout/chat_input_view.xml
@@ -2,9 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:theme="@style/Hedvig.Theme.Widgets.Chat.Input"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:theme="@style/Hedvig.Theme.Widgets.Chat.Input">
 
     <LinearLayout
         android:id="@+id/textInputContainer"
