--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -115,7 +115,7 @@
     </style>
 
     <style name="AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
-        <item name="materialButtonStyle">@style/Hedvig.Button.Text</item>
+        <item name="android:background">@drawable/background_rounded_corners</item>
     </style>
 
     <style name="DialogNoAnimation">
