--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -55,6 +55,9 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:alertDialogTheme">@style/AlertDialog</item>
         <item name="android:statusBarColor">@color/colorBackground</item>
+        <item name="materialAlertDialogTheme">
+            @style/Theme.MaterialComponents.DayNight.Dialog.Alert
+        </item>
     </style>
 
     <attr name="materialButtonContainedLargeStyle" format="reference" />
@@ -62,10 +65,6 @@
     <attr name="textAppearanceBody3" format="reference" />
     <attr name="colorButton" format="reference" />
     <attr name="textColorButton" format="reference" />
-
-    <style name="Hedvig.Theme.Chat" parent="Hedvig.Theme">
-        <item name="android:colorBackground">@color/colorBackgroundChat</item>
-    </style>
 
     <style name="Hedvig.Theme.Widgets.Chat.Hedvig" parent="Hedvig.Theme">
         <item name="colorSurface">@color/colorChatHedvigBackground</item>
