--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -54,9 +54,7 @@
         <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@color/colorBackground</item>
-        <item name="materialAlertDialogTheme">
-            @style/Theme.MaterialComponents.DayNight.Dialog.Alert
-        </item>
+        <item name="materialAlertDialogTheme">@style/AlertDialog</item>
     </style>
 
     <attr name="materialButtonContainedLargeStyle" format="reference" />
@@ -64,6 +62,10 @@
     <attr name="textAppearanceBody3" format="reference" />
     <attr name="colorButton" format="reference" />
     <attr name="textColorButton" format="reference" />
+
+    <style name="AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
+        <item name="android:textAllCaps">false</item>
+    </style>
 
     <style name="Hedvig.Theme.Widgets.Chat.Hedvig" parent="Hedvig.Theme">
         <item name="colorSurface">@color/colorChatHedvigBackground</item>
