--- a/app/src/main/res/layout/dashboard_contract_row.xml
+++ b/app/src/main/res/layout/dashboard_contract_row.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/ic_two_homes"
+                app:srcCompat="@drawable/ic_houses"
                 tools:tint="@color/black" />
 
             <TextView
@@ -89,6 +89,7 @@
                 android:layout_marginStart="@dimen/base_margin_double"
                 android:layout_marginEnd="@dimen/base_margin_double"
                 android:contentDescription="@null"
+                android:tint="?colorPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -99,7 +100,67 @@
     </com.hedvig.app.ui.view.HedvigCardView>
 
     <com.hedvig.app.ui.view.HedvigCardView
-        android:id="@+id/perilCard"
+        android:id="@+id/documentsCard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/base_margin">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="@dimen/peril_category_icon_size"
+                android:layout_height="@dimen/peril_category_icon_size"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:contentDescription="@null"
+                app:srcCompat="@drawable/ic_documents" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/base_margin_double"
+                android:layout_marginTop="@dimen/base_margin_triple"
+                android:layout_marginBottom="@dimen/base_margin_triple"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?textAppearanceHeadline6"
+                    tools:text="Mina dokument" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?textAppearanceBody2"
+                    tools:text="Forsikringsbevis" />
+
+            </LinearLayout>
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="@dimen/base_margin_double"
+                android:contentDescription="@null"
+                android:tint="?colorPrimary"
+                app:srcCompat="@drawable/ic_info_purple" />
+
+        </LinearLayout>
+
+    </com.hedvig.app.ui.view.HedvigCardView>
+
+    <com.hedvig.app.ui.view.HedvigCardView
+        android:id="@+id/coverageCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin">
@@ -115,7 +176,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/base_margin_double"
                 android:contentDescription="@null"
-                tools:src="@drawable/ic_family" />
+                app:srcCompat="@drawable/ic_coverage" />
 
             <LinearLayout
                 android:id="@+id/textContainer"
