maybe I did more than just reskin :)

--- a/app/src/main/res/layout/offer_fact_area.xml
+++ b/app/src/main/res/layout/offer_fact_area.xml
@@ -3,18 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/midnight_700"
+    android:background="@color/off_white"
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_margin_triple"
         android:gravity="center_horizontal"
-        android:textAppearance="?textAppearanceHeadline5"
-        android:textColor="@color/violet_200"
-        tools:text="Testvägen 1" />
+        android:text="@string/OFFER_HOUSE_SUMMARY_TITLE"
+        android:textAppearance="?textAppearanceHeadline4"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -24,7 +22,7 @@
         android:layout_marginEnd="@dimen/base_margin_double"
         android:gravity="center_horizontal"
         android:text="@string/OFFER_HOUSE_SUMMARY_DESC"
-        android:textColor="@color/white" />
+        style="?textAppearanceBody1"/>
 
     <com.hedvig.app.ui.view.ExpandableContentView
         android:id="@+id/expandableContentView"
@@ -177,7 +175,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:background="@color/separator_on_surface"
+                android:backgroundTint="@color/separator_on_surface"
                 android:visibility="gone"
                 tools:visibility="visible" />
 
@@ -205,7 +203,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="@dimen/base_margin_double"
-                android:background="@color/separator_on_surface" />
+                android:backgroundTint="@color/separator_on_surface" />
 
             <TextView
                 android:id="@+id/offerExpirationDate"
